// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/transform-accessor @accessor compiles for static property 1`] = `
"class Foo {
  static #_bar;

  static get bar() {
    return this.#_bar;
  }

  static set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor compiles without interceptors 1`] = `
"class Foo {
  #_bar;

  get bar() {
    return this.#_bar;
  }

  set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor preserves following decorators for both accessors 1`] = `
"import { other } from 'decorators';

class Foo {
  #_bar;

  @other()
  get bar() {
    return this.#_bar;
  }

  @other()
  set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor preserves following decorators only for getter 1`] = `
"import { other } from 'decorators';

class Foo {
  #_bar;

  @other()
  get bar() {
    return this.#_bar;
  }

  set bar(value) {
    this.#_bar = value;
  }

}"
`;
